--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
-  "version": "1.0",
+  "name": "Vinted Placard Malin",
+  "description": "Une extension Chrome qui vous facilite pleinement la vie. Activez la, vendez plus et devenez un Influencer sur Vinted.",
+  "version": "0.0.1",
 
   "options_ui": {
     "page": "options.html",
@@ -15,12 +15,10 @@
     "default_popup": "popup.html"
   },
 
-  "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
-  ],
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["js/vendor.js", "js/content_script.js"]
+  }],
 
   "background": {
     "scripts": ["js/vendor.js", "js/background.js"]
